Fix blurring caused by synthetic bolding by avoiding both bold and italic on the same text, for which et-book does not have a font face for.

--- a/themes/tufte/source/css/main.css
+++ b/themes/tufte/source/css/main.css
@@ -43,7 +43,12 @@ p > a {
 }
 
 h1.title {
-  width: 100%
+  width: 100%;
+}
+
+blockquote > p > strong {
+  /* There's not bold & italic font for et-book, and the synthetic bolding can look blurry depending on zoom level. */
+  font-style: normal;
 }
 
 p, footer, table, div.table-wrapper-small, div.supertable-wrapper > p, div.booktabs-wrapper {
